--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,3 +15,18 @@
     clear: both;
     float: none;
 }
+
+.collection {
+  margin: 0.5rem 0 1rem 0;
+  border: none;
+  overflow: hidden;
+  position: relative;
+}
+
+.collection .collection-item {
+  background-color: #fff;
+  line-height: 1.5rem;
+  padding: 10px 20px;
+  margin: 0;
+  border-bottom: none;
+}
