--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,3 +34,9 @@
 .shift-right {
   margin-right: 30px;
 }
+
+.waves-effect.waves-teal .waves-ripple {
+  /* The alpha value allows the text and background color
+  of the button to still show through. */
+   background-color: rgba(121, 85, 72, 0.65);
+ }
